--- a/style.css
+++ b/style.css
@@ -396,6 +396,7 @@ embed,
 iframe,
 object {
 	max-width: 100%;
+	width: 100%;
 }
 
 img {
@@ -958,10 +959,6 @@ header#masthead .uk-navbar:after {
 	width: 100%;
 }
 
-.slider-image img {
-	width: 100%;
-}
-
 .slider-image:before {
 	content: "";
 	position: absolute;
@@ -970,6 +967,27 @@ header#masthead .uk-navbar:after {
 	top: 0;
 	bottom: 0;
 	background-color: rgba(0, 0, 0, 0.3);
+}
+
+.slider-caption {
+	max-width: 600px !important;
+}
+
+.slider-caption h2 {
+	font-weight: 600;
+}
+
+.slider-caption p {
+	font-size: 18px;
+}
+
+.slider-caption .uk-button-primary {
+	background-color: #76324b !important;
+	color: #fff !important;
+}
+
+.slider-caption .uk-button-primary:hover {
+	background-color: #5d1c34 !important;
 }
 
 .waves-top-shape {
@@ -989,6 +1007,15 @@ header#masthead .uk-navbar:after {
 }
 
 /* Our Services */
+.our-services h3 {
+	transition: all 200ms ease-in-out;
+}
+
+.our-services li.service-blocks:hover > h3 {
+	color: #76324b;
+	font-weight: 500;
+}
+
 /* Our Team */
 .our-team {
 	background: #f8f8f8;
@@ -1164,6 +1191,70 @@ header#masthead .uk-navbar:after {
 	background: #636468;
 }
 
+/* Blog Section */
+.latest-news .blog-item .article-story-content {
+	padding: 5px;
+	transition: all 400ms ease-in-out;
+}
+
+.latest-news .blog-item .article-story-content .the-title {
+	transition: 0.5s;
+}
+
+.latest-news .blog-item .article-story-content .the-title h4 {
+	color: #76324b;
+	font-weight: bold;
+	transition: 0.5s;
+}
+
+.latest-news .blog-item .article-story-content .the-title:hover {
+	text-decoration: none;
+}
+
+.latest-news .blog-item .article-story-content .the-title:hover > h4 {
+	color: #4f3209;
+}
+
+.latest-news .blog-item:hover > .article-story-content {
+	box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.16);
+	border-color: #76324b;
+}
+
+.latest-news .blog-item:hover > .article-story-header {
+	box-shadow: 0 -5px 5px 0 rgba(0, 0, 0, 0.16);
+	padding-top: 0;
+}
+
+.latest-news .blog-item:hover > .article-story-header img {
+	transform: scale(1.1);
+	filter: grayscale(100%);
+}
+
+.latest-news .blog-item .article-story-header {
+	position: relative;
+	overflow: hidden;
+	transition: .5s;
+}
+
+.latest-news .blog-item .article-story-header a {
+	display: block;
+	overflow: hidden;
+}
+
+.latest-news .blog-item .article-story-header img {
+	transition: all 400ms ease-in-out;
+}
+
+.latest-news .blog-item .article-story-header .uk-meta {
+	padding: 5px 5px 0;
+	color: #999;
+}
+
+/* Testimonials */
+.testimonials p.description {
+	font-size: 20px;
+}
+
 /* Our Clients */
 .our-clients {
 	background: #636468;
@@ -1298,10 +1389,16 @@ footer#colophon {
 	}
 }
 
+footer#colophon .footer-top {
+	color: #8c8c8c;
+}
+
 footer#colophon .footer-top ul {
 	margin: 0;
 	list-style: none;
 	padding-left: 0;
+	position: relative;
+	z-index: 1;
 }
 
 footer#colophon .footer-top ul li {
@@ -1313,9 +1410,113 @@ footer#colophon .footer-top ul li:last-child {
 	border-bottom: none;
 }
 
+footer#colophon .footer-top ul li a {
+	color: #8c8c8c;
+}
+
+footer#colophon .footer-top ul li a:hover {
+	color: #76324b;
+	text-decoration: none;
+}
+
+footer#colophon .footer-top ul li time {
+	opacity: 0.5;
+	font-weight: 500;
+}
+
+footer#colophon .footer-top section#block-6 {
+	position: relative;
+}
+
+footer#colophon .footer-top section#block-6:after {
+	content: "";
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 25px;
+	bottom: 0;
+	text-indent: -9999px;
+	background: url(/wp-content/themes/skinny-ninjah/images/contact-details-map.png) no-repeat center center;
+	opacity: 0.11;
+}
+
 footer#colophon .site-info {
 	background-color: transparent;
 	background-image: linear-gradient(275deg, #191919 39%, #76324b 100%);
+}
+
+/** Contact Page **/
+ul.contact-list {
+	padding-left: 0;
+}
+
+ul.contact-list li {
+	margin-bottom: 20px;
+	padding-bottom: 20px;
+	border-bottom: 1px solid #ccc;
+	list-style: none;
+	position: relative;
+	padding-left: 60px;
+}
+
+ul.contact-list li:last-child {
+	border-bottom: none;
+}
+
+ul.contact-list li::before {
+	content: "\f041";
+	font-family: 'FontAwesome';
+	font-size: 20px;
+	position: absolute;
+	background: #76324b;
+	padding: 10px;
+	border-radius: 100%;
+	width: 50px;
+	height: 50px;
+	text-align: center;
+	left: 0;
+	color: #fff;
+	vertical-align: middle;
+}
+
+nf-field {
+	display: inline-block;
+	width: 49%;
+}
+
+nf-field:nth-child(1), nf-field:nth-child(3) {
+	margin-right: 5px;
+}
+
+nf-field:nth-child(5) {
+	width: 99%;
+}
+
+.nf-form-fields-required {
+	display: none;
+}
+
+.nf-form-content .nf-error.field-wrap .nf-field-element:after {
+	height: 25px;
+	width: 25px;
+	line-height: 28px;
+	border-radius: 50%;
+	font-size: 15px;
+	top: 12px;
+	right: 5px;
+}
+
+.nf-form-content textarea.ninja-forms-field {
+	height: 150px !important;
+	background: transparent !important;
+}
+
+.ninja-forms-field {
+	background: transparent !important;
+}
+
+input#nf-field-4 {
+	background: #76324b !important;
 }
 
 #loader-wrapper #loader {
@@ -1421,6 +1622,15 @@ footer#colophon .site-info {
 .loaded #loader-wrapper .loader-section.section-right {
 	transform: translateX(100%);
 	transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
+.skinny-ninjah-overlay {
+	background-color: rgba(117, 50, 73, 0.2);
+	height: 100%;
+	width: 100%;
+	position: absolute;
+	left: 0;
+	top: 0;
 }
 
 /* JavaScript Turned Off */
