--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -7,6 +7,7 @@ $color_grey: #ccc;
 $color_dark_grey: #666;
 $color_bg_gradient: -webkit-linear-gradient(left, #362f2d, #534741);
 $color_footer_bg: #191919;
+$color_nice_border: #e2e2e2;
 
 $logo_color: #636468;
 
